tests/chapter_14/invalid_parse/malformed_and.c
int main(void)
{
    return 1 & &2; // TODO I don't think this works b/c if you did extra credit this is a semantic error, not a parse error
}